[gd_scene load_steps=4 format=3 uid="uid://cre8hki0xv04h"]

[ext_resource type="Script" path="res://scripts/game/objects/crafting_station.gd" id="1_7qybj"]
[ext_resource type="Texture2D" uid="uid://c166ris5i5wey" path="res://resources/texture/icon.svg" id="2_73uod"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5gfw"]
size = Vector2(256, 256)

[node name="CraftingStation" type="Node2D"]
script = ExtResource("1_7qybj")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.733978, 0.611725, 1)
texture = ExtResource("2_73uod")

[node name="ReachableRegion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReachableRegion"]
shape = SubResource("RectangleShape2D_t5gfw")

[connection signal="body_entered" from="ReachableRegion" to="." method="_on_reachable_region_body_entered"]
[connection signal="body_exited" from="ReachableRegion" to="." method="_on_reachable_region_body_exited"]
